httpd/httpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd1-svc
spec:
  selector:
    server: httpd1
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: httpd2-svc
spec:
  selector:
    server: httpd2
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: web-svc666
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
