httpd/httpd-virtual-service-abort-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd2-abort-fault-injection
spec:
  hosts:
  - httpd2-svc
  http:
  - fault:
      abort:
        percent: 100
        httpStatus: 503
    route:
    - destination:
        host: httpd2
