httpd/httpd-virtual-service-delay-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd2-delay-fault-injection
spec:
  hosts:
  - httpd2-svc
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: httpd2
