httpd/httpd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
  - web-svc
  http:
  - route:
    - destination:
        host: httpd1-svc
      weight: 90
    - destination:
        host: httpd2-svc
      weight: 10
